# yesod-auth-oauth2

./: .env.example  .gitignore  .hlint.yaml  .restyled.yaml  .stack-all  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  brittany.yaml  circle.yml  heroku.yml  package.yaml  renovate.json  stack-hoauth2-2.0.yaml  stack-hoauth2-2.2.yaml  stack-hoauth2-2.3.yaml  stack-hoauth2-2.6.yaml  stack-lts-10.3.yaml  stack-lts-11.18.yaml  stack-lts-11.5.yaml  stack-lts-12.2.yaml  stack-lts-13.2.yaml  stack-lts-14.27.yaml  stack-lts-16.10.yaml  stack-lts-16.31.yaml  stack-lts-18.28.yaml  stack-lts-19.33.yaml  stack-lts-20.26.yaml  stack-lts-9.21.yaml  stack-nightly.yaml  stack.yaml  yesod-auth-oauth2.cabal
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: add-asana-comment.yml  ci.yml  mergeabot.yml  release.yml
URI/ByteString/: Extension.hs
Yesod/Auth/: OAuth2.hs
Yesod/Auth/OAuth2/: BattleNet.hs  Bitbucket.hs  EveOnline.hs  Github.hs  Google.hs  Internal.hs  Learn.hs  Nylas.hs  Salesforce.hs  Slack.hs  Spotify.hs  Twitter.hs  Upcase.hs
example/: Main.hs  main.hs
src/Network/OAuth/OAuth2/: Compat.hs
src/URI/ByteString/: Extension.hs
src/UnliftIO/: Except.hs
src/Yesod/Auth/: OAuth2.hs
src/Yesod/Auth/OAuth2/: Auth0.hs  AzureAD.hs  AzureADv2.hs  BattleNet.hs  Bitbucket.hs  ClassLink.hs  Dispatch.hs  DispatchError.hs  ErrorResponse.hs  EveOnline.hs  Exception.hs  GitHub.hs  GitLab.hs  Github.hs  Google.hs  Nylas.hs  ORCID.hs  Okta.hs  Prelude.hs  Provider.hs  Random.hs  Salesforce.hs  Slack.hs  Spotify.hs  Twitch.hs  Upcase.hs  UserId.hs  WordPressDotCom.hs
test/: SpecHelper.hs
test/URI/ByteString/: ExtensionSpec.hs
test/Yesod/Auth/: OAuth2Spec.hs
