name:            yesod-auth-oauth2
version:         0.0.7
license:         BSD3
license-file:    LICENSE
author:          Tom Streller
maintainer:      Tom Streller
synopsis:        Library to authenticate with OAuth 2.0 for Yesod web applications.
description:     OAuth 2.0 authentication
category:        Web
stability:       Experimental
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://github.com/scan/yesod-auth-oauth2

flag ghc7

flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

library
    if flag(network-uri)
        build-depends: network-uri >= 2.6
    else
        build-depends: network < 2.6

    if flag(ghc7)
        build-depends:   base                >= 4.3      && < 5
        cpp-options:     -DGHC7
    else
        build-depends:   base                >= 4         && < 4.3

    build-depends:   bytestring              >= 0.9.1.4
                   , http-conduit            >= 2.0       && < 3.0
                   , http-types              >= 0.8       && < 0.9
                   , aeson                   >= 0.6       && < 0.8
                   , yesod-core              >= 1.2       && < 1.4
                   , authenticate            >= 1.3.2.7   && < 1.4
                   , yesod-auth              >= 1.3       && < 1.4
                   , text                    >= 0.7       && < 2.0
                   , yesod-form              >= 1.3       && < 1.4
                   , transformers            >= 0.2.2     && < 0.4
                   , hoauth2                 >= 0.4.1     && < 0.5
                   , lifted-base             >= 0.2       && < 0.4
                   , uuid                    >= 1.3       && < 1.4

    exposed-modules: Yesod.Auth.OAuth2
                     Yesod.Auth.OAuth2.Google
                     Yesod.Auth.OAuth2.Learn
                     Yesod.Auth.OAuth2.Github

    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/scan/authenticate-oauth2.git
