name:            yesod-auth-oauth2
version:         0.1.1
license:         BSD3
license-file:    LICENSE
author:          Tom Streller
maintainer:      Pat Brisbin <pat@thoughtbot.com>
synopsis:        OAuth 2.0 authentication plugins
description:     Library to authenticate with OAuth 2.0 for Yesod web applications.
category:        Web
stability:       Experimental
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://github.com/thoughtbot/yesod-auth-oauth2

flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

library
    if flag(network-uri)
        build-depends: network-uri >= 2.6
    else
        build-depends: network < 2.6

    build-depends:   base                    >= 4.5       && < 5
                   , bytestring              >= 0.9.1.4
                   , http-conduit            >= 2.0       && < 3.0
                   , http-types              >= 0.8       && < 0.9
                   , aeson                   >= 0.6       && < 0.9
                   , yesod-core              >= 1.2       && < 1.5
                   , authenticate            >= 1.3.2.7   && < 1.4
                   , random
                   , yesod-auth              >= 1.3       && < 1.5
                   , text                    >= 0.7       && < 2.0
                   , yesod-form              >= 1.3       && < 1.5
                   , transformers            >= 0.2.2     && < 0.5
                   , hoauth2                 >= 0.4.7     && < 0.5
                   , lifted-base             >= 0.2       && < 0.4

    exposed-modules: Yesod.Auth.OAuth2
                     Yesod.Auth.OAuth2.Github
                     Yesod.Auth.OAuth2.Spotify
                     Yesod.Auth.OAuth2.Twitter
                     Yesod.Auth.OAuth2.Upcase

    ghc-options:     -Wall

source-repository head
  type:     git
  location: https://github.com/thoughtbot/authenticate-oauth2.git
