name:            yesod-auth-oauth2
version:         0.2.2
license:         BSD3
license-file:    LICENSE
author:          Tom Streller
maintainer:      Pat Brisbin <pat@thoughtbot.com>
synopsis:        OAuth 2.0 authentication plugins
description:     Library to authenticate with OAuth 2.0 for Yesod web applications.
category:        Web
stability:       Experimental
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://github.com/thoughtbot/yesod-auth-oauth2

flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

flag example
  description: Build the example application
  default: False

library
    if flag(network-uri)
        build-depends: network-uri >= 2.6
    else
        build-depends: network < 2.6

    build-depends:   base                    >= 4.5       && < 5
                   , bytestring              >= 0.9.1.4
                   , http-client             >= 0.4.0     && < 0.5
                   , http-conduit            >= 2.0       && < 3.0
                   , http-types              >= 0.8       && < 0.10
                   , aeson                   >= 0.6       && < 0.12
                   , yesod-core              >= 1.2       && < 1.5
                   , authenticate            >= 1.3.2.7   && < 1.4
                   , random
                   , yesod-auth              >= 1.3       && < 1.5
                   , text                    >= 0.7       && < 2.0
                   , yesod-form              >= 1.3       && < 1.5
                   , transformers            >= 0.2.2     && < 0.6
                   , hoauth2                 >= 0.4.7     && < 0.6
                   , lifted-base             >= 0.2       && < 0.4
                   , vector                  >= 0.10      && < 0.12

    exposed-modules: Yesod.Auth.OAuth2
                     Yesod.Auth.OAuth2.Github
                     Yesod.Auth.OAuth2.Google
                     Yesod.Auth.OAuth2.Spotify
                     Yesod.Auth.OAuth2.Upcase
                     Yesod.Auth.OAuth2.EveOnline
                     Yesod.Auth.OAuth2.Nylas
                     Yesod.Auth.OAuth2.Slack
                     Yesod.Auth.OAuth2.Salesforce
                     Yesod.Auth.OAuth2.Bitbucket

    ghc-options:     -Wall

executable yesod-auth-oauth2-example
  if flag(example)
    buildable: True
  else
    buildable: False

  hs-source-dirs:      example
  main-is:             main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , http-conduit
                     , load-env
                     , text
                     , warp
                     , yesod
                     , yesod-auth
                     , yesod-auth-oauth2

test-suite test
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  hs-source-dirs:    test
  ghc-options:       -Wall
  build-depends:   base
                 , yesod-auth-oauth2
                 , hspec

source-repository head
  type:     git
  location: https://github.com/thoughtbot/yesod-auth-oauth2.git
